<resources>
    <string name="app_name">SanStore</string>
    <string name="lihat_barang">Lihat Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="stock">Jumlah Barang Tersedia</string>
    <string name="masukkan">Masukkan</string>
    <string name="rp12_000_00">Rp12.000.00</string>
    <string name="quantity">16x</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="hint_user">Masukkan Username</string>
    <string name="hint_stok">Masukkan Stok</string>
    <string name="hint_pass">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="reset_stok">Reset Stok</string>
    <string name="search">search</string>
    <string name="min_stok">Min Stok: %1$d</string>
</resources>