<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/icon_store"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/icon"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="@id/register_tl"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginLeft="20dp"
      android:contentDescription="null" />


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/register_tl"
      style="@style/inputLayout_theme"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:textColor="@color/white"
      android:fontFamily="sans-serif-condensed"
      app:boxStrokeColor="@color/white"
      android:textColorHint="@color/white"
      app:hintTextColor="@color/white"
      app:prefixTextColor="@color/white"
      android:hint="@string/hint_user"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/icon_store">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_editText"
        android:maxLines="1"
        android:lines="1"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/pass_regis_tl"
      style="@style/inputLayout_theme"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:hint="@string/hint_pass"
      android:fontFamily="sans-serif-condensed"
      app:boxStrokeColor="@color/white"
      app:hintTextColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_tl">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_editText"
        android:maxLines="1"
        android:lines="1"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      app:strokeColor="@color/white"
      app:strokeWidth="2dp"
      app:layout_constraintTop_toBottomOf="@id/pass_regis_tl"/>

  </androidx.constraintlayout.widget.ConstraintLayout>